<resources>
    <string name="app_name">Task</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_screen_label">Поиск дешевых авиабилетов</string>
    <string name="to">Куда-Турция</string>
    <string name="main_screen_label2">Музыкально отлететь</string>
    <string name="from">Москва</string>
    <string name="show_all_places">Показать все места</string>
    <string name="difficult_route">Сложный маршрут</string>
    <string name="anywhere">Куда угодно</string>
    <string name="weekends">Выходные</string>
    <string name="hot_tickets">Горячие билеты</string>
    <string name="popular_direction">Популярное направление</string>
    <string name="instanbul">Стамбул</string>
    <string name="sochi">Сочи</string>
    <string name="phuket">Пхукет</string>
    <string name="back">Назад</string>
    <string name="plug">Заглушка</string>
    <string name="chip_back">обратно</string>
    <string name="chip_passengers">1,эконом</string>
    <string name="show_all">Показать все</string>
    <string name="map">Карта</string>
    <string name="see_all_tickets">Посмотреть все билеты</string>
    <string name="filter">Фильтр</string>
    <string name="aviatickets">Авиабилеты</string>
    <string name="profile">Профиль</string>
    <string name="subsciptions">Подписки</string>
    <string name="coroche">Короче</string>
    <string name="hotels">Отели</string>
    <string name="no_internet_connections">Отсуствует интернет соединение!</string>
    <string name="bad_internet_connections">Плохое интернет соединение!</string>
    <string name="unknown_error">Что то пошло не так!</string>
    <string name="reload">Reload</string>
    <string name="retry">Повторить</string>
    <string name="filters">Фильтры</string>
    <string name="transfer">Пересадки</string>
    <string name="no_transfer">Без пересадок</string>
    <string name="with_transfer">Только с багажом</string>
    <string name="done">Готово</string>


</resources>