<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.filter.FilterFragment"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/grey_2"
            android:gravity="center_vertical"
            >
            <ImageView
                android:id="@+id/iv_close"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"/>
            <TextView
                android:id="@+id/tv_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filters"
                android:textColor="@color/white"
                android:textFontWeight="600"
                android:textSize="20sp"
                android:fontFamily="@font/sf_pro_sembold"
                />

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textFontWeight="600"
            android:textSize="16sp"
            android:fontFamily="@font/sf_pro_regular"
            android:text="@string/transfer"
            android:layout_marginVertical="16dp"
            android:textColor="@color/white"
            />
        <LinearLayout
            android:background="@color/grey_2"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:paddingHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/no_transfer"/>
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sw_with_transfer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:thumbTint="@color/blue"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:background="@color/grey_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/with_transfer"/>
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sw_with_baggage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:thumbTint="@color/blue"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_gravity="bottom"
        android:id="@+id/btn_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="8dp"
        android:textColor="@color/white"
        app:rippleColor="@color/green"
        android:backgroundTint="@color/green"
        android:textStyle="italic"
        android:text="@string/done"/>
</FrameLayout>