<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".screens.main.MainFragment"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/sf_pro_sembold"
            android:gravity="center"
            android:paddingTop="28dp"
            android:text="@string/main_screen_label"
            android:textColor="@color/white"
            android:textFontWeight="600"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_parent"
            style="@style/CardView.Dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="36dp"
            android:foreground="?selectableItemBackground"
            android:padding="16dp"
            app:cardBackgroundColor="@color/grey_3"
            app:cardCornerRadius="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_child"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:padding="16dp"
                app:cardBackgroundColor="@color/grey_4"
                app:cardCornerRadius="16dp"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="16dp"

                    >

                    <ImageView
                        android:id="@+id/iv_search_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/ic_search"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >

                        <EditText
                            android:id="@+id/et_from"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/textview"
                            android:fontFamily="@font/sf_pro_regular"
                            android:imeOptions="actionDone"
                            android:lines="1"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:text="@string/from"
                            android:textColor="@color/white"
                            android:textFontWeight="600"
                            android:textSize="16sp"
                            />

                        <com.google.android.material.divider.MaterialDivider
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:dividerColor="@color/grey_4"
                            />

                        <EditText
                            android:id="@+id/ed_to"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/textview"
                            android:fontFamily="@font/sf_pro_regular"
                            android:hint="@string/to"
                            android:textColorHint="@color/grey_6"
                            android:textFontWeight="600"
                            android:textSize="16sp"
                            />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/sf_pro_sembold"
            android:padding="16dp"
            android:text="@string/main_screen_label2"
            android:textColor="@color/white"
            android:textFontWeight="600"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_parent"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_music_suggestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/tv_title2"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            app:cornerRadius="8dp"
            android:textStyle="italic"
            android:textColor="@color/white"
            android:backgroundTint="@color/grey_3"
            app:rippleColor="@color/grey_5"
            android:text="@string/show_all_places"
            app:layout_constraintTop_toBottomOf="@id/rv_music_suggestion"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/included"
        layout="@layout/bottomesheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>