<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.Material3.BottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <FrameLayout
        android:id="@+id/bottomsheet"
        style="@style/Widget.Material3.BottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_2"
        android:clipToOutline="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <com.google.android.material.bottomsheet.BottomSheetDragHandleView
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:paddingBottom="0dp"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_child"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:padding="16dp"
                app:cardBackgroundColor="@color/grey_4"
                app:cardCornerRadius="16dp"
                >


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp"
                    >

                    <EditText
                        android:id="@+id/et_from"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/textview"
                        android:drawableStart="@drawable/ic_plane"
                        android:drawablePadding="8dp"
                        android:fontFamily="@font/sf_pro_regular"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:lines="1"
                        android:singleLine="true"
                        android:text="@string/from"
                        android:textFontWeight="600"
                        android:textSize="16sp"
                        />

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:dividerColor="@color/grey_5"
                        />

                    <EditText
                        android:id="@+id/et_to"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/textview"
                        android:drawableStart="@drawable/ic_search"
                        android:drawablePadding="8dp"
                        android:fontFamily="@font/sf_pro_regular"
                        android:hint="@string/to"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:lines="1"
                        android:singleLine="true"
                        android:textFontWeight="600"
                        android:textSize="16sp"
                        />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                >

                <LinearLayout
                    android:id="@+id/root_difficult_route"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|top"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:id="@+id/iv_difficult_route"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/iv_route"
                        android:padding="8dp"
                        android:src="@drawable/ic_route"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Сложный маршрут"
                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/root_anywhere"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|top"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:id="@+id/iv_anywhere"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/iv_anywhere"
                        android:padding="8dp"
                        android:src="@drawable/sphere"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:gravity="center"
                        android:text="@string/anywhere"
                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/root_weekends"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|top"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:id="@+id/iv_weekends"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/iv_weekends"
                        android:padding="8dp"
                        android:src="@drawable/ic_calendar"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"

                        android:text="@string/weekends"
                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/root_hot_tickets"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|top"

                    android:orientation="vertical"
                    >

                    <ImageView
                        android:id="@+id/iv_hot_tickets"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/iv_hot_tickets"
                        android:padding="8dp"
                        android:src="@drawable/ic_fire"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/hot_tickets"

                        />

                </LinearLayout>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/grey_3"
                app:cardBackgroundColor="@color/grey_2"
                app:cardCornerRadius="16dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp"
                    >

                    <include
                        android:id="@+id/item1"
                        layout="@layout/item_suggest"
                        />

                    <include
                        android:id="@+id/item2"
                        layout="@layout/item_suggest"
                        />

                    <include
                        android:id="@+id/item3"
                        layout="@layout/item_suggest"
                        />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>